# sprint-local

./: .cursorrules  .env.example  .gitignore  .windsurfrules  BACKLOG.md  DOCUMENTATION.md  EPIC_TEMPLATE_BACKLOG.md  INSTALL.md  LICENSE  README.md  USER_STORY.md  add_docs.py  backlog_generator.py  cli.py  cli_interface.py  code_analyzer.py  config.py  conversation.txt  crawl4ai.md  documentation.py  driver_graph.py  driver_nodes.py  driver_state.py  initialize_store.py  initialize_vector_store.py  initialize_vector_store_tests.py  inst.txt  integrated_workflow.py  jest.config.js  langchain_file.py  langchain_file_debug.py  llm_wrapper.py  load_vector_store.py  memory.py  models.py  navigator_graph.py  navigator_nodes.py  navigator_state.py  package-lock.json  package.json  (+19 more)
analyzers/: __init__.py  base.py  python_analyzer.py  typescript_analyzer.py
cache/: directory_analysis.json
docs/: backlog_generation.md  cli_usage.md  dependency_context_diagram.md  implementation.xmd  langchain-addmessage.md  langchain-agent.md  langchain-chain-iterate.md  langchain-chaining.md  langchain-chatprompt.md  langchain-graph-goto.md  langchain-reAct.md  langchain-retry-output.md  langchain-tools.md  langgraph-condtional.md  langgraph-dataclass.md  logging.md  lsp-ts.py  temp-inst.md  vector.md
examples/: epic_memory_usage.py
notebooks/: 01_basic_usage.ipynb  02_advanced_configuration.ipynb  02_reflection_chain_demo.ipynb  03_custom_subagent_extension.ipynb  04_vector_creation_demo.ipynb  05_file_reader_demo.ipynb  README.md  Untitled.ipynb  file_analyser_exploration.ipynb  functional_api_test.ipynb  langgraph_agent_demo.ipynb  vector_search_demo.ipynb
src/: __main__.py  add_docs.py  backlog_generator.py  cli.py  cli_interface.py  code_splitter.py  config.py  documentation.py  driver_graph.py  driver_nodes.py  driver_state.py  exceptions.py  initialize_vector_store.py  initialize_vector_store_tests.py  integrated_workflow.py  langchain_file.py  langchain_file_debug.py  llm_wrapper.py  load_vector_store.py  logging_config.py  navigator_graph.py  navigator_nodes.py  scanner.py  search.py  ts_code_analyzer.test.ts  ts_code_analyzer.ts  vector_store_initializer.py  vectorstore.py
templates/: backlog.md  code_structure.md  epic.md  prompt_template.txt  task_breakdown.md
tests/: README.md  conftest.py  test_analysis_subagent.py  test_backlog_generator.py  test_choose_best_option.py  test_cli.py  test_cli_interface.py  test_code_analyzer.py  test_code_splitter.py  test_config.py  test_crawler.py  test_driver.py  test_driver_agent.py  test_driver_graph.py  test_driver_nodes.py  test_driver_tools.py  test_file_tools.py  test_integrated_workflow.py  test_llm.py  test_logging.py  test_memory.py  test_navigator.py  test_navigator_graph.py  test_navigator_tools.py  test_python_analyzer.py  test_scanner.py  test_search.py  test_testing_agent_determine_cli.py  test_typescript_analyzer.py  test_vector_creation.py  test_vectorstore.py
tools/: __init__.py  base_tool.py  (+5 more)
(+154 files in other folders)
