[tool.poetry]
name = "sprint-py"
version = "0.1.0"
description = ""
authors = ["Bhavesh Ramburn <nitrogen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langgraph = "^0.2.68"
langchain = "^0.3.16"
langchain-openai = "^0.3.2"
faiss-cpu = "^1.9.0.post1"
openai = "^1.60.2"
openrouter = "^1.0"
ipykernel = "^6.29.5"
langchain-community = "^0.3.16"
langchain-ollama = "^0.2.2"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
