[tool.poetry]
name = "sprint-py"
version = "0.1.0"
description = ""
authors = ["Bhavesh Ramburn <nitrogen@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2.68"
langchain = "^0.3.16"
langchain-openai = "^0.3.2"
faiss-cpu = "^1.9.0.post1"
openai = "^1.60.2"
openrouter = "^1.0"
ipykernel = "^6.29.5"
langchain-community = "^0.3.16"
langchain-ollama = "^0.2.2"
jupyter = "^1.1.1"
langchain-core = "^0.3.33"
duckduckgo-search = "^7.3.0"
crawl4ai = "^0.4.248"
mcp = {extras = ["cli"], version = "^1.2.1"}
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
fastmcp = "^0.4.1"
tenacity = "^9.0.0"
aiohttp = "^3.11.12"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pytest = "^8.3.4"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcp-server = "mcp_server.server:main"
